<resources>
    <string name="app_name">NasaPicture</string>
    <string name="photo_of_the_day_sub">Photo of the day</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="snack_bar_error_text">Loading error</string>
    <string name="snack_bar_action_text">Try again</string>
    <string name="live_data_error">Receiving data error!</string>
    <string name="favourite">Favourites</string>
    <string name="settings">Settings</string>
    <string name="display_1">Go to screen 1</string>
    <string name="display_2">Go to screen 2</string>
    <string name="fab_text">fab pushing</string>
    <string name="search_wiki">Find in Wikipedia</string>
    <string name="wiki_helper_text">Search for a term in Wikipedia</string>
    <string name="image_desc">Picture</string>
    <string name="today_text">Today</string>
    <string name="yesterday_text">Yesterday</string>
    <string name="day_before_yesterday_text">Day before yesterday</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="base_theme_text">Base theme</string>
    <string name="red_theme_text">Red theme</string>
    <string name="green_theme_text">Green theme</string>
    <string name="blue_theme_text">Blue theme</string>
    <string name="night_theme_text">Night theme</string>
    <string name="another_screen">Images</string>
    <string name="earth_title">Earth</string>
    <string name="mars_title">Mars</string>
    <string name="solar_system_title">Solar system</string>
    <string name="video_of_the_day_stub">Video of the day</string>
    <string name="fab_back">Back</string>
    <string name="fab_home">Home</string>
    <string name="fab_next">Next</string>
    <string name="text_screen">Information</string>
    <string name="big_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut diam leo, suscipit eu tortor et, maximus mattis mauris. Phasellus hendrerit sagittis lectus, sed viverra massa pharetra nec. Mauris eleifend vulputate nulla eu ullamcorper. Donec aliquam est sit amet mi feugiat varius. Phasellus consequat ultricies volutpat. Aliquam a felis ac dui rhoncus interdum sit amet vel elit. Morbi sollicitudin sem ac ipsum pharetra auctor. Mauris volutpat ipsum sed nisl ultrices, ac porttitor lectus molestie. Fusce et pharetra dui. Aenean ac blandit arcu. Sed semper nibh quis lacus cursus, sed ullamcorper sapien ultricies. Fusce accumsan iaculis efficitur. Nulla mollis dapibus justo non rhoncus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla mi nunc, cursus eget tempor ac, commodo at nibh. In hac habitasse platea dictumst. Ut non sodales justo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur ex est, varius ut urna id, posuere vulputate nibh. Vivamus ultrices orci justo, in consequat nibh vestibulum eget. Integer non lorem fermentum libero faucibus molestie. Curabitur non est nisl. Mauris commodo arcu lacus, et malesuada ipsum porta id. Donec dictum posuere ornare. Praesent vitae tortor leo. Donec fringilla ultricies mi. Nam at tellus maximus, malesuada mi et, mattis tortor. Suspendisse molestie sollicitudin purus, at tincidunt enim cursus eu. Aenean tristique mauris, a egestas dui malesuada vel. Nunc eget auctor nulla, a faucibus nulla. Nullam et congue est. Proin lobortis blandit mattis. Cras quis accumsan lectus. Donec sed placerat nunc. Donec tempor porttitor mauris, placerat convallis sapien sollicitudin in. Aliquam erat volutpat. Aliquam vel tellus ante. Fusce viverra egestas lacinia. Quisque blandit libero a augue pulvinar, eu condimentum dui lobortis. Vestibulum sit amet lorem in mi convallis lacinia. Vestibulum sagittis mattis odio non venenatis. Aenean ultrices nisi nisl, vel porta augue pretium ut. In nec nisi condimentum, commodo lorem non, faucibus orci. Sed et mi nec mi ornare faucibus. Integer arcu leo, eleifend vel nibh in, sagittis ullamcorper risus. Vivamus velit lorem, auctor id vulputate sed, porta vitae quam. Quisque pharetra vehicula nunc gravida dignissim. Maecenas sodales, odio sed tempus eleifend, diam elit rhoncus ligula, eget dictum urna enim in dui. Vestibulum tempus dolor nisl, vitae sollicitudin turpis ultrices in. Suspendisse viverra libero facilisis, pellentesque purus vulputate, blandit risus. Nullam blandit auctor luctus. Nam at elit convallis diam scelerisque tempor. Phasellus sodales venenatis luctus. Suspendisse scelerisque rutrum arcu eu pulvinar. Integer et ligula at urna feugiat semper. Duis sed venenatis dui. Integer commodo lorem vel vulputate cursus. Donec suscipit dui non interdum ullamcorper. Proin pretium maximus dui, in congue justo cursus id. Curabitur sed faucibus dolor. Suspendisse dignissim, diam vitae dignissim accumsan, arcu ipsum volutpat lectus, id tincidunt mauris turpis sed nunc. Etiam eu ultrices quam. Fusce laoreet velit id magna iaculis accumsan. In dignissim, tortor nec eleifend vehicula, urna elit mollis diam, eu volutpat sem nunc eu purus. Etiam volutpat, augue nec vestibulum luctus, eros odio luctus nisl, et tincidunt mauris nisl quis velit. Suspendisse iaculis tellus ligula, a tristique sapien elementum eu. Maecenas pellentesque est quis massa ullamcorper, eget ultrices tellus efficitur. In hac habitasse platea dictumst. Donec pharetra id mauris at posuere. Maecenas accumsan, elit eu euismod posuere, risus nisi volutpat orci, in mattis ipsum nibh at tellus. Mauris odio purus, auctor nec lacinia ut, mattis nec felis. Phasellus pharetra pulvinar nisi, et ullamcorper ex molestie et. Duis id tortor sit amet libero molestie lacinia. Mauris at placerat dui. Nunc dapibus scelerisque leo. Nunc et massa ultricies ex congue rhoncus. In eleifend faucibus consequat. In hac habitasse platea dictumst. Donec in enim turpis. Suspendisse venenatis a neque ut dictum. Fusce placerat nisi erat, eget consequat ipsum vestibulum id. Phasellus vitae felis leo. Quisque vel rutrum est. Donec gravida porttitor lectus, eget viverra sapien viverra vitae. Nam finibus ipsum sit amet elementum vehicula. Proin lectus enim, porta non ligula sit amet, lobortis ullamcorper risus. Pellentesque molestie pretium justo, a pulvinar metus rutrum ut. Suspendisse at tempor tellus, ac cursus enim. Nulla sapien arcu, maximus sit amet fringilla vitae, mattis vel odio. Integer ornare euismod consectetur. Sed bibendum pellentesque ipsum in semper. Suspendisse rutrum et risus sed maximus. Fusce tempor urna eget neque volutpat, sit amet condimentum nisi fringilla. Maecenas consectetur sem non urna semper sagittis. Morbi viverra laoreet euismod. Maecenas sed augue volutpat, molestie erat at, molestie mauris. Vestibulum sed fringilla tortor. Maecenas volutpat egestas neque, vulputate tempus quam pellentesque eget. In a laoreet nisl. Aenean sem augue, posuere vel varius id, hendrerit vel sapien. Aliquam tellus eros, euismod id pharetra et, sodales ut quam. Morbi semper fringilla est, at lobortis metus. Donec eleifend laoreet odio vitae dapibus. Donec finibus accumsan tortor eu laoreet. Phasellus tincidunt enim eu nisi convallis congue. Cras a ornare mi. Cras interdum sagittis ante, non bibendum augue facilisis ac. Ut nulla purus, lobortis et egestas a, cursus et augue. Fusce euismod, sem id aliquam varius, tellus ultrices purus, eu convallis sem mi ut metus. Pellentesque sagittis lacus sit amet sapien dictum, vel semper ante tempus. Fusce et diam urna. Maecenas a elit aliquam, scelerisque nibh nec, mollis lacus. Praesent nibh ipsum, fringilla non est et, ornare vestibulum tortor. Ut semper ante sit amet massa laoreet, a faucibus ligula semper. Duis quis tempus augue. Nullam dictum risus non est interdum bibendum. Sed ac iaculis lectus. Nam elementum augue id ipsum egestas, nec venenatis sapien euismod. Vivamus quam diam, egestas non odio in, bibendum feugiat mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec ac erat neque. Pellentesque sit amet neque sollicitudin, pharetra leo sit amet, lacinia ex. Vivamus convallis neque dignissim quam molestie, sed tincidunt diam facilisis. </string>
    <string name="tf_toolbar_description">Toolbar</string>
    <string name="fab_size">Fab size</string>
    <string name="loading_error_custom_text">loading / error image</string>
    <string name="animation_page_text">Animation page</string>
    <string name="animation_image">Earth image</string>
    <string name="animation_fab">Rotate button</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="mars_photo_date">June 5, 2018</string>
    <string name="mars_photo_title">Danielson Crater</string>
    <string name="mars_photo_description">This image shows sedimentary rock and sand within Danielson Crater, an impact crater 67 kilometers in diameter, located in the southwest Arabia Terra region of Mars.</string>
    <string name="show_description">Show description</string>
    <string name="constraint_set_animation_page">ConstraintSet animation</string>
    <string name="recycler_list_page">Recycler list page</string>
    <string name="earth_additional_text">Additional text</string>
    <string name="planets_header">Header</string>
    <string name="fragment_recycler_fab">Add new item</string>
    <string name="option_mars">Mars</string>
    <string name="option_earth">Earth</string>
    <string name="mars_long_description">Mars is the fourth planet from the Sun and the second-smallest planet in the Solar System, being larger than only Mercury. In English, Mars carries the name of the Roman god of war and is often referred to as the \"Red Planet\". The latter refers to the effect of the iron oxide prevalent on Mars\'s surface, which gives it a striking reddish appearance in the sky. Mars is a terrestrial planet with a thin atmosphere, with surface features such as impact craters, valleys, dunes, and polar ice caps.</string>
    <string name="earth_long_description">Earth is the third planet from the Sun and the only astronomical object known to harbor life. While large amounts of water can be found throughout the Solar System, only Earth sustains liquid surface water. About 71% of Earth\'s surface is made up of the ocean, dwarfing Earth\'s polar ice, lakes and rivers. The remaining 29% of Earth\'s surface is land, consisting of continents and islands. Earth\'s surface layer is formed of several slowly moving tectonic plates, interacting to produce mountain ranges, volcanoes and earthquakes. Earth\'s liquid outer core generates the magnetic field that shapes Earth\'s magnetosphere, deflecting destructive solar winds.</string>
    <string name="fragment_recycler_search_fab">Search item</string>
    <string name="search_item">Find item on page</string>
    <string name="ux_fragment">Open UX Fragment</string>
    <string name="ux_text">Show text</string>
    <string name="ux_button">Show buttons</string>
    <string name="ux_main_text">Select one item in bottom menu</string>
    <string name="some_text">Here is some text</string>
    <string name="ux_tutorial">Show tutorial</string>

</resources>