<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_another_activity"
        android:icon="@drawable/ic_baseline_image_24"
        android:title="@string/another_screen"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_text"
        android:icon="@drawable/ic_baseline_text_snippet_24"
        android:title="@string/text_screen"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/animation_page"
        android:icon="@drawable/ic_baseline_animation_24"
        android:title="@string/animation_page_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/animation_bonus_page"
        android:icon="@drawable/ic_baseline_app_shortcut_24"
        android:title="@string/constraint_set_animation_page"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/recycler_list_page"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/recycler_list_page"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ux_fragment"
        android:icon="@drawable/ic_baseline_auto_awesome_24"
        android:title="@string/ux_fragment"
        app:showAsAction="ifRoom" />

</menu>